# libhook

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
src/: lib.rs  patch.rs
src/alloc/: mod.rs  proximity.rs  search.rs
src/code/x64/: mod.rs
src/hook/: jmphook.rs  mod.rs
src/patch/: byte.rs  code.rs  mem.rs  mod.rs
src/patcher/: byte.rs  code.rs  mem.rs  mod.rs
src/wrapper/: mod.rs
src/wrapper/convention/: cdecl.rs  mod.rs
