[package]
name = "libhook"
authors = ["qw3rty01 <qw3rty01@gmail.com>"]
description = "Rust library designed to provide a high level abstraction around hooking external functions"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced-x86 = "1.17.0"
region = "3.0.0"
thiserror = "1.0.30"
